fixing color for more contrast

--- a/src/components/Trends/TrendsPanel.less
+++ b/src/components/Trends/TrendsPanel.less
@@ -64,7 +64,7 @@
 
           span {
             &.heading {
-              color: @gray-80;
+              color: @gray;
             }
             &.date {
               float: right;
@@ -294,4 +294,4 @@
       }
     }
   }
-} 
+}
